now uses gnu-stow, has a script to setup and better readme

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -60,3 +60,16 @@ set -g status-right "#[fg=#f38ba8,bg=#1e1e2e]#[fg=#1e1e2e,bg=#f38ba8]  #[f
 # Pane borders
 set -g pane-border-style 'fg=#313244'
 set -g pane-active-border-style 'fg=#89b4fa'
+
+
+# plugins
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Auto-save interval (minutes), default is 15
+set -g @continuum-restore 'on'
+
+# Initialize TPM (keep this line at the very bottom)
+run '~/.tmux/plugins/tpm/tpm'
