--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,6 +2,7 @@
 set -g mouse on
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-shell /bin/zsh
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -61,6 +62,28 @@ set -g status-right "#[fg=#f38ba8,bg=#1e1e2e]#[fg=#1e1e2e,bg=#f38ba8]  #[f
 set -g pane-border-style 'fg=#313244'
 set -g pane-active-border-style 'fg=#89b4fa'
 
+# ======================================================================
+# VIM-TMUX-NAVIGATOR INTEGRATION
+# ======================================================================
+# Smart pane switching with awareness of vim splits
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
+
+# Seamless navigation between vim windows and tmux panes
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+# Restore Ctrl+l to clear screen (use Ctrl+\ instead in tmux)
+bind-key -n 'C-\\' if-shell "$is_vim" 'send-keys C-\\\\' 'send-keys C-l'
+
+# Copy mode vim-tmux-navigator bindings
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # plugins
 # List of plugins
